Link hover effect: focus state erased. Podcast section: fixed bugs on safari.

--- a/app/scss/_default/_buttons.scss
+++ b/app/scss/_default/_buttons.scss
@@ -164,7 +164,7 @@
 			}
 		}
 
-		&:hover, &:focus{
+		&:hover{
 			.hover-container{
 				@include translate(0, -120%);
 			}
