--- a/app/scss/_default/_responsive.scss
+++ b/app/scss/_default/_responsive.scss
@@ -523,20 +523,8 @@
 					.episode-container{
 						@include eraseShadow();
 
-						.podcast-cover-wrapper{
-							.podcast-cover{}
-						}
-
 						.podcast-description{
 							white-space: normal;
-
-							.podcast-title{}
-							.podcast-guest{}
-							.podcast-intro{}
-						}
-
-						.link-mobile-only{
-							// display: none;
 						}
 					}
 				}
@@ -1206,18 +1194,6 @@
 			.episodes-wrapper{
 				.list-episodes-container{
 					max-width: 460px;
-					
-					.episode-container{
-						.podcast-cover-wrapper{
-							.podcast-cover{}
-						}
-
-						.podcast-description{
-							.podcast-title{}
-							.podcast-guest{}
-							.podcast-intro{}
-						}
-					}
 				}
 			}
 
@@ -1247,6 +1223,8 @@
 						padding: 12px;
 
 						.podcast-cover-wrapper{
+							min-width: 120px;
+							width: 120px;
 							height: 120px;
 						}
 
@@ -1768,7 +1746,6 @@
 								font-size: 1.54em;
 								margin-bottom: 6px;
 							}
-							.podcast-guest{}
 							.podcast-intro{
 								max-width: 475px;
 								font-size: .85em;
@@ -1787,6 +1764,8 @@
 
 					.episode-container{
 						.podcast-cover-wrapper{
+							min-width: 150px;
+							width: 150px;
 							height: 150px;
 						}
 
@@ -1805,22 +1784,6 @@
 								letter-spacing: 0;
 								margin-top: 20px;
 							}
-						}
-					}
-				}
-			}
-
-			.episodes-wrapper{
-				.list-episodes-container{
-					.episode-container{
-						.podcast-cover-wrapper{
-							.podcast-cover{}
-						}
-
-						.podcast-description{
-							.podcast-title{}
-							.podcast-guest{}
-							.podcast-intro{}
 						}
 					}
 				}
