--- a/app/scss/_views/_podcast.scss
+++ b/app/scss/_views/_podcast.scss
@@ -30,7 +30,8 @@
 
 				.podcast-cover-wrapper{
 					position: relative;
-					width: auto;
+					min-width: 100px;
+					width: 100px;
 					height: 100px;
 
 					.podcast-cover{
@@ -87,6 +88,7 @@
 					width: 100%;
 					height: 100%;
 					top: 0;
+					left: 0;
 				}
 			}
 		}
